--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@
           			<span class="icon-globe"></span>
           		</div>
           		<h3 class="mb-4">LinkedIn</h3>
-	            <p><a href="(24) Mohamed Elamin _ LinkedIn.mhtml">yoursite.com</a></p>
+	            <p><a href="https://www.linkedin.com/in/mohamed-elamin-1b79322b3/">yoursite.com</a></p>
 	          </div>
           </div>
         </div>
